--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "parcel src/index.html src/styles/first.scss src/scripts/first.js",
-    "build": "CI=false parcel build src/index.html",
-    "vercel-build": "CI=false parcel build src/index.html",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
